force-app/main/default/objects/Placement__c/Placement__c.object-meta.xml
<CustomObject>
    <label>Placement</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Placement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>