force-app/main/default/objects/Placement__c/fields/CPA_home__c.field-meta.xml
<CustomField>
    <fullName>CPA_home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPA home</label>
    <referenceTo>CPA_home__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>