force-app/main/default/objects/Placement__c/fields/CPA_Home_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Billing_Postal_Code__c</fullName>
    <label>CPA Home Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>