force-app/main/default/objects/Placement__c/fields/CPA_Home_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Billing_State__c</fullName>
    <label>CPA Home Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>