force-app/main/default/objects/Placement__c/fields/Exit_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Exit_Approval_Status__c</fullName>
    <label>Exit Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>