force-app/main/default/objects/Placement__c/fields/Exit_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Begin_Date__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>