force-app/main/default/objects/Placement__c/fields/Exit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exit_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>