force-app/main/default/objects/Placement__c/fields/Exit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date_Time__c</fullName>
    <label>Exit Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>