force-app/main/default/objects/Placement__c/fields/Exit_Type__c.field-meta.xml
<CustomField>
    <fullName>Exit_Type__c</fullName>
    <label>Exit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Placement</fullName>
            </value>
            <value>
                <fullName>Change in Placement Structure</fullName>
            </value>
            <value>
                <fullName>Permanently Leaving Custody and Care</fullName>
                <label>Permanently Leaving Custody &amp; Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>