force-app/main/default/objects/Placement__c/fields/Placement_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Approval_Status__c</fullName>
    <label>Placement Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>