force-app/main/default/objects/Placement__c/fields/Placement_Structure__c.field-meta.xml
<CustomField>
    <fullName>Placement_Structure__c</fullName>
    <label>Placement Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Foster Care</fullName>
            </value>
            <value>
                <fullName>Guardianship Assistance Program</fullName>
            </value>
            <value>
                <fullName>Emergency Shelter (Agency)</fullName>
            </value>
            <value>
                <fullName>Independent Living Residential Program</fullName>
            </value>
            <value>
                <fullName>Formal Kinship Care</fullName>
            </value>
            <value>
                <fullName>Restricted (Relative) Foster Care</fullName>
            </value>
            <value>
                <fullName>Intermediate Foster Care</fullName>
            </value>
            <value>
                <fullName>Treatment Foster Care</fullName>
            </value>
            <value>
                <fullName>Emergency Foster Home Care</fullName>
            </value>
            <value>
                <fullName>Residential Group Homes</fullName>
            </value>
            <value>
                <fullName>Emergency Group Shelter Care</fullName>
            </value>
            <value>
                <fullName>Emergency Foster Care Retainer</fullName>
            </value>
            <value>
                <fullName>After care room and board</fullName>
            </value>
            <value>
                <fullName>Alternative Living Units</fullName>
            </value>
            <value>
                <fullName>Teen Mother Programs</fullName>
            </value>
            <value>
                <fullName>Residential Treatment Centers</fullName>
            </value>
            <value>
                <fullName>Refugee Child</fullName>
            </value>
            <value>
                <fullName>Therapeutic Group Homes</fullName>
            </value>
            <value>
                <fullName>Adoptive Home</fullName>
            </value>
            <value>
                <fullName>Pre-Finalized Adoptive Home</fullName>
            </value>
            <value>
                <fullName>Treatment Foster Care Level 1</fullName>
            </value>
            <value>
                <fullName>Treatment Foster Care Level 2</fullName>
            </value>
            <value>
                <fullName>Treatment Foster Care Level 3</fullName>
            </value>
            <value>
                <fullName>Treatment Foster Care Level 4</fullName>
            </value>
            <value>
                <fullName>Intermediate Foster Care Difficulty of Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>