force-app/main/default/objects/Placement__c/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>