force-app/main/default/objects/Placement__c/fields/Reason_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exit__c</fullName>
    <label>Reason for Exit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Disruption</fullName>
            </value>
            <value>
                <fullName>Adoption Finalization</fullName>
            </value>
            <value>
                <fullName>Adoptive Placement</fullName>
            </value>
            <value>
                <fullName>Child Issue: Behavior (Property Destruction, Aggression to Others, Defiance)</fullName>
            </value>
            <value>
                <fullName>Child Issue: Dissatisfaction with provider</fullName>
            </value>
            <value>
                <fullName>Child Issue: Needs have changed</fullName>
            </value>
            <value>
                <fullName>Child Issue: Needs less Structured/Restricted Environment</fullName>
            </value>
            <value>
                <fullName>Child Issue: Needs more Structured/Restricted Environment</fullName>
            </value>
            <value>
                <fullName>Child Issue: Runaway</fullName>
            </value>
            <value>
                <fullName>Child Issue: Sexual Aggression/Acting Out</fullName>
            </value>
            <value>
                <fullName>Child Issue: Substance abuse</fullName>
            </value>
            <value>
                <fullName>Child Issue: Suicidal/Self-Abusive</fullName>
            </value>
            <value>
                <fullName>Court: Court Ordered Placement Change</fullName>
            </value>
            <value>
                <fullName>Court ordered return home against DSS recommendation</fullName>
            </value>
            <value>
                <fullName>Custody/Guardianship - Non-Relative</fullName>
            </value>
            <value>
                <fullName>Custody/Guardianship - Relative</fullName>
            </value>
            <value>
                <fullName>Custody Non-Relative</fullName>
            </value>
            <value>
                <fullName>Death of Child</fullName>
            </value>
            <value>
                <fullName>Emancipation-Independence</fullName>
            </value>
            <value>
                <fullName>Emancipation-Marriage</fullName>
            </value>
            <value>
                <fullName>Emancipation-Military</fullName>
            </value>
            <value>
                <fullName>Guardianship Non-Relative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Adoptive or pre-adoptive Placement</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Educational/Vocational Placement</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Placement Closer to Home</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Placement with Relative</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Placement with Siblings or Own Child</fullName>
            </value>
            <value>
                <fullName>Permanency Step: Trial Home Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>