force-app/main/default/objects/Placement__c/fields/Referral_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Send_Date__c</fullName>
    <label>Referral Send Date</label>
    <type>Date</type>
</CustomField>