force-app/main/default/objects/Placement__c/fields/Response_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Response_Accepted__c</fullName>
    <label>Response Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>