force-app/main/default/objects/Placement__c/fields/TitleIveRecId_Temporary__c.field-meta.xml
<CustomField>
    <fullName>TitleIveRecId_Temporary__c</fullName>
    <label>TitleIveRecId Temporary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>