force-app/main/default/objects/Placement__c/recordTypes/Placement_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Placement_Read_Only</fullName>
    <active>true</active>
    <label>Placement Read Only</label>
</RecordType>